--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script
     src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js">
     </script>
-    <script src="js/init.js"></script>
+    <script src="init.js"></script>
   </head>
   <body>
     <h1>Chat</h1>
